--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -2648,5 +2648,4 @@ document.getElementById("btnCorteRuta").addEventListener("click", () => {
 📌 NOTAS PROVSOFT – 2025-12-15
 --------------------------------
 - 
-- CORTES NO FUNCIONA Y EL CARRTIO NO AGREGA EL BUSCADOR
--->
+- EL BUSCADOR NO AGREGA AL CARRITO-->
