--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -2638,5 +2638,6 @@ document.getElementById("btnCorteRuta").addEventListener("click", () => {
 <!--
 📌 NOTAS PROVSOFT – 2025-12-15
 --------------------------------
-- 
-- EL BUSCADOR NO AGREGA AL CARRITO-->
+// ✅ Dic-2025:
+// Buscador, equivalentes y balanza funcionando correctamente.
+// Índices y refactor pendientes NO afectan operación actual.
