--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -2577,7 +2577,7 @@ document.getElementById("btnCorteRuta").addEventListener("click", () => {
 
 </script>
 <footer class="provsoft-footer">
-  PROVSOFT POS · v2.0 · Commit e817ba0 --> 516f591
+  PROVSOFT POS · v2.0 · Commit e3412e5
  · © ProvSoft
 </footer>
 </body>
