--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -2618,6 +2618,7 @@ Estado actual del sistema:
 - Login: refresh permitido (F5 / Ctrl+R / hard refresh)
 - POS activo: refresh bloqueado
 - Cobro activo: refresh bloqueado
+- VERSION ACTUAL ESTABLE 997fa43
 
 ⚠️ IMPORTANTE:
 No olvidar eliminar este ajuste antes de producción final
