--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -2589,7 +2589,7 @@ document.getElementById("btnCorteRuta").addEventListener("click", () => {
 
 </script>
 <footer class="provsoft-footer">
-  PROVSOFT POS · v2.0 · Commit e3412e5
+  PROVSOFT POS · v2.0 · Commit 7adaacf
  · © ProvSoft
 </footer>
 </body>
@@ -2631,6 +2631,7 @@ Estado actual del sistema:
 - POS activo: refresh bloqueado
 - Cobro activo: refresh bloqueado
 - VERSION ACTUAL ESTABLE 997fa43
+- en prubas de la version 7adaacf
 
 ⚠️ IMPORTANTE:
 No olvidar eliminar este ajuste antes de producción final
