--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -559,6 +559,7 @@ if (catalogoSW && Array.isArray(catalogoSW) && catalogoSW.length > 0) {
     claveSat: x.claveSat || null,
     unidadMedidaSat: x.unidadSat || x.unidadMedidaSat || null,
     departamento_id: x.departamento_id || null,
+    departamento: x.departamento || null, // 🔥 FIX
     costoUnit: Number(x.costoUnit || x.costoSinImpuesto || 0),
   }));
 
