--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -144,6 +144,33 @@ header,#loginScreen,.btn,#modalCobro,#qrReaderContainer{display:none!important}
   bottom: -65px !important;     /* 🔥 baja más el carrito */
   margin-top: 25px !important;  /* espacio visual extra */
 }
+.snow{
+  pointer-events: none;
+  position: fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  z-index: 999; /* 👈 CLAVE */
+
+  background-image:
+    radial-gradient(2px 2px at 20% 30%, rgba(255,255,255,.9) 50%, transparent),
+    radial-gradient(1.5px 1.5px at 70% 40%, rgba(255,255,255,.8) 50%, transparent),
+    radial-gradient(1px 1px at 40% 80%, rgba(255,255,255,.7) 50%, transparent);
+
+  background-size: 300px 300px; /* 👈 CLAVE */
+  animation: snowMove 18s linear infinite;
+  opacity: .4;
+}
+
+@keyframes snowMove{
+  from{
+    background-position: 0 -300px;
+  }
+  to{
+    background-position: 0 600px;
+  }
+}
 
 
 </style>
@@ -2593,6 +2620,7 @@ document.getElementById("btnCorteRuta").addEventListener("click", () => {
   PROVSOFT POS · v2.0 · Commit 63c5c43
  · © ProvSoft
 </footer>
+<div class="snow"></div>
 </body>
 </html>
 
